# levenshtein_rust

./: CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  levenshtein_rust.gemspec
.github/workflows/: main.yml
ext/levenshtein_rust/: Cargo.toml  build.rs  extconf.rb
ext/levenshtein_rust/src/: lib.rs
lib/: levenshtein_rust.rb
lib/levenshtein_rust/: version.rb
sig/: levenshtein_rust.rbs
spec/: levenshtein_rust_spec.rb  spec_helper.rb
