[package]
name = "levenshtein_rust"
version = "0.1.0"
edition = "2021"
authors = ["Erin Paget <erin.dees@hey.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "=0.5.2" }
rb-sys = { version = "=0.9.115" }

[build-dependencies]
rb-sys-build = { version = "=0.9.115" }
